# law_diff

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  README_CN.md
backend/: Cargo.toml  README.md  README_CN.md  check_output.txt  check_output_2.txt  start_backend.sh
backend/examples/: now.txt  origin.txt
backend/scripts/: download_bert_model.sh
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/ast/: mod.rs  repro_issue.rs
backend/src/diff/: aligner.rs  aligner_tests.rs  mod.rs  similarity.rs  sorting_test.rs
backend/src/models/: mod.rs
backend/src/nlp/: bert_ner.rs  formatter.rs  hybrid_ner.rs  mod.rs  ner.rs  ner_trait.rs  regex_ner.rs  tokenizer.rs
frontend/: README.md  README_CN.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
frontend/components/: theme-toggle.tsx
frontend/components/diff/: AlignedArticleView.tsx  AnchorNavigation.tsx  ArticleChangeView.tsx  ComparisonSettings.tsx  DiffResultViewer.tsx  GitDiffView.tsx  SideBySideView.tsx
frontend/components/layout/: Footer.tsx
frontend/components/legal/: EntityHighlight.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  slider.tsx  textarea.tsx
frontend/lib/: constants.ts  diff-utils.ts  types.ts
