[package]
name = "law-compare-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# NLP and text processing
jieba-rs = "0.6"  # Chinese word segmentation
similar = "2.4"   # Diff algorithm
unicode-segmentation = "1.11"
regex = "1.10"    # Pattern matching for NER
rand = "0.8"      # Random numbers for confidence simulation
rayon = "1.8"     # Parallel processing

# BERT-based NER (optional, heavy dependency)
# rust-bert = { version = "0.21", optional = true }
# tch = { version = "0.13.0", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
# bert = ["rust-bert", "tch"]  # Enable BERT-based NER

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
